...
            "state" : "translated",
            "value" : "• %lld seguro"
          }
        }
      }
    },
    "Accept" : {
      "localizations" : {
        "es-US" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Aceptar"
          }
...
    "Backup required" : {

    },
    "Backup saved" : {

    },
    "Cancel" : {
      "localizations" : {
        "es-US" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancelar"
          }
...
            "state" : "translated",
            "value" : "Borrado Seguro de Artefacto"
          }
        }
      }
    },
    "Click 'Scan System' in the sidebar to analyze your developer tools" : {
      "localizations" : {
        "es-US" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Haz clic en ‘Escanear sistema’ en la barra lateral para analizar tus herramientas de desarrollo."
          }
...
